--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ img {
 }
 #end {
 	background-color: #F6AE2D;
-	width: 100%;
+	line-height: 50px;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	text-align: center;
@@ -58,6 +58,16 @@ a {
   font-variation-settings:
     "wdth" 100;
 }
+h4 {
+	font-family: "Open Sans", serif;
+  	color: #2F4858;
+  	font-optical-sizing: auto;
+  	font-weight: bolder;
+  	font-style: italic;
+  	line-height: auto;
+  	font-variation-settings:
+    	"wdth" 100;
+	}
 
 @media only screen and (max-width: 600px){
  
