--- a/index.css
+++ b/index.css
@@ -30,6 +30,10 @@ img {
 	padding-bottom: 100px;
 	color: #2F4858;
 }
+#subhed {
+/*	width: 80%;*/
+	font-size: 20px;
+}
 #end {
 	background-color: #F6AE2D;
 	line-height: 50px;
