--- a/index.css
+++ b/index.css
@@ -56,6 +56,7 @@ a {
 }
 .open-sans-copy {
   font-family: "Open Sans", serif;
+  font-size: 18px;
   color: #2F4858;
   font-optical-sizing: auto;
   font-weight: 500;
@@ -79,17 +80,19 @@ h4 {
  
 	.photo-story {
 		width: auto;
-/*		padding-left: 5%;*/
 		margin-left: 0px;
 		margin-right: 0px;
+		padding-left: 5%;
 		height: auto;
 		font-size: 25px;
+		line-height: 40px;
 	}
 	.body-copy{
 		width: auto;
-/*		padding-left: 5%;*/
 		margin-left: 0px;
 		margin-right: 0px;
+		padding-left: 5%;
+		line-height: 40px;
 	}
 	.ubuntu-bold, #end {
   		line-height: 40px;
